tests/baselines/reference/functionExpressionInWithBlock.errors.txt
tests/cases/compiler/functionExpressionInWithBlock.ts(2,2): error TS2410: Unsupported 'with' statement, all symbols within a 'with' block will be resolved to 'any'.


==== tests/cases/compiler/functionExpressionInWithBlock.ts (1 errors) ====
    function x() {
     with({}) {
     ~~~~~~~~
!!! error TS2410: Unsupported 'with' statement, all symbols within a 'with' block will be resolved to 'any'.
      function f() {
       () => this;
      }
     }
    }